# sendou.py

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  test.py
.github/workflows/: publish-to-pypi.yml  pull_request.yml
docs/: cacheConfig.md  index.md  requirements.txt
docs/getting-started/: installation.md  quickstart.md  usageGuide.md
scripts/: checkUpstreamSchema.py  genRefPages.py  updateUpstreamSchema.py
sendou/: __init__.py  client.py  client_old.py
sendou/models/: __init__.py  badge.py  baseModel.py  calendarEntry.py  organization.py  plusServer.py  stageMapList.py  user.py
sendou/models/tournament/: __init__.py  bracket.py  match.py  team.py  tournament.py
sendou/models/tournament/bracket/: Standing.py  __init__.py  bracket.py  type.py
sendou/requests/: __init__.py  client.py
tests/sendou/models/: test_organization.py
